--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "~4.0"
+        "guzzlehttp/guzzle": "~4.0",
+        "guzzlehttp/guzzle-services": "~0.1.0",
+        "guzzlehttp/command": "dev-master",
+        "symfony/options-resolver": "~2.4.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0.0"
