--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "guzzlehttp/guzzle": "~4.0",
         "guzzlehttp/guzzle-services": "dev-master",
-        "symfony/options-resolver": "~2.4.0"
+        "symfony/options-resolver": "~2.4.0",
+        "jms/serializer": "~0.16"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0.0"
